--- a/main.css
+++ b/main.css
@@ -1,15 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
-*{
+body {
+    min-width: 500px;
     font-family: 'Roboto', sans-serif;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
     background-color: #EEEBE2;
-}
-
-body {
-    min-width: 500px;
 }
 
 /* --- */
@@ -17,18 +13,19 @@ body {
 .selections {
     display: flex;
     justify-content: center;
-    width: 30%;
     margin: 4rem auto 2rem auto;
+    gap: 5rem;
 }
 
 @media (max-width: 800px) {
     .selections{
       flex-direction: column;
+      gap: 0px;
     }
 }
 
 .selection-div {
-    min-width: 15rem;
+    min-width: 150px;
 }
 
 .selection-symbol{
@@ -91,16 +88,16 @@ body {
 
 /* --- */
 
-.draw-text{
-    color: #99947F;
-}
-
 #player-score, .winner-text {
     color: #7FA489;
 }
 
 #computer-score, .loser-text {
     color: #C87E74;
+}
+
+.draw-text{
+    color: #99947F;
 }
 
 /* --- */
@@ -113,8 +110,13 @@ body {
 /* --- */
 
 .reset {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 4rem;
+}
+
+.reset-btn {
     text-align: center;
     font-size: 5rem;
-    margin-bottom: 4rem;
     cursor: pointer;
 }
